# fastapi_tutorial

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml
api/: db.py
api/cruds/: done.py  task.py
api/routers/: task.py
api/schemas/: task.py
tests/: test_main.py
